--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,16 +1,13 @@
 # see https://symfony.com/doc/current/reference/configuration/framework.html
 framework:
+    error_controller: App\Controller\ErrorController::error
     secret: '%env(APP_SECRET)%'
     #csrf_protection: true
-
-    # Note that the session will be started ONLY if you read or write from it.
     session: true
-
-    #esi: true
-    #fragments: true
 
 when@test:
     framework:
+        error_controller: App\Controller\ErrorController::error
         test: true
         session:
             storage_factory_id: session.storage.factory.mock_file
