--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -46,10 +46,12 @@ when@prod:
                 handler: nested
                 excluded_http_codes: [404, 405]
                 buffer_size: 50 # How many messages should be saved? Prevent memory leaks
+                path:  '%kernel.logs_dir%/%kernel.environment%.log'
+                level: error  # Eviter 'debug' en production
             nested:
                 type: stream
                 path: php://stderr
-                level: debug
+                level: error
                 formatter: monolog.formatter.json
             console:
                 type: console
